--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,3 +1,7 @@
+<!--
+ Copyright (C) 2009-2010 Aubort Jean-Baptiste (Rorist)
+ Licensed under GNU's GPL 2, see README
+-->
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Network Discovery</string>
