--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -14,7 +14,9 @@
     <string name="btn_scan">Scanner</string>
     <string name="btn_options">Options</string>
     <string name="btn_back">Retour</string>
-    
+    <string name="btn_info">Info</string>
+    <string name="btn_ports">Ports</string>
+        
     <string name="package_missing">%s doit être installée depuis le Market !</string>
     
     <string name="wifi_enabled">Wifi activé</string>
