--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -15,7 +15,9 @@
     <string name="btn_scan">扫描</string>
     <string name="btn_options">选项</string>
     <string name="btn_back">返回</string>
- 
+    <string name="btn_info">信息</string>
+    <string name="btn_ports">港口</string>
+         
     <string name="package_missing">必须从市场上安装 %s ！</string>
     
     <string name="wifi_enabled">Wifi 已开启</string>
